# Cortex

./: .gitignore  .gitmodules  CMakeLists.txt  commit.cpp  commit.hpp  cortex.cpp  error.hpp  filesystem.cpp  filesystem.hpp  history_dump.cpp  print.hpp  repository.cpp  repository.hpp  serializer.hpp  time.hpp  utils.hpp  win32_filesystem.cpp
.github/workflows/: cmake-linux.yml  cmake-win32.yml
client/: CMakeLists.txt  cortex.cpp  cortex.hpp
client_android/: CMakeLists.txt  settings.gradle
client_android/app/: build.gradle
client_android/app/src/androidTest/java/com/bloodredtape/cortex/: ExampleInstrumentedTest.kt
client_android/app/src/main/: AndroidManifest.xml
client_android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
client_android/app/src/main/java/com/bloodredtape/cortex/: MainActivity.kt
client_android/app/src/main/res/values/: themes.xml
client_android/app/src/main/res/values-night/: themes.xml
client_android/app/src/test/java/com/bloodredtape/cortex/: ExampleUnitTest.kt
client_android/gradle/wrapper/: gradle-wrapper.properties
cmake/: Platform.cmake
core/: CMakeLists.txt  assert.hpp  buffer.hpp  client_repository.cpp  client_repository.hpp  commit.cpp  commit.hpp  filesystem.cpp  filesystem.hpp  linux_fs.cpp  linux_net.cpp  linux_time.cpp  protocol.hpp  repository.cpp  repository.hpp  serializer.hpp  time.hpp  unix_fs.cpp  unix_net.cpp  utils.hpp  win32_filesystem.cpp  win32_fs.cpp  win32_net.cpp  win32_time.cpp
core/async/: event.hpp
core/fs/: dir.hpp  dir_state.cpp  dir_state.hpp  dir_watcher.hpp  file_action.hpp  ignore_list.hpp
core/net/: byte_order.hpp  ip.cpp  ip.hpp  socket.hpp  tcp_listener.cpp  tcp_listener.hpp  tcp_socket.cpp  tcp_socket.hpp  udp_socket.cpp  udp_socket.hpp
history_browser/: CMakeLists.txt  history_browser.cpp  history_browser.hpp  main.cpp  ui.cpp  ui.hpp
history_dump/: CMakeLists.txt  history_dump.cpp
server/: CMakeLists.txt  cortex.cpp
